--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
 }
 
 group 'com.helpchoice.kotlin'
-version '1.0.1'
+version '1.0.2-SNAPSHOT'
 
 apply plugin: 'java'
 apply plugin: 'kotlin'
