--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,21 @@ task writeNewPom {
                     }
                 }
             }
-        }.writeTo("$libsDir/$project.name-$version-pom.xml")
+        }.writeTo("$libsDir/$project.name-$version.pom")
     }
+}
+
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+artifacts {
+    archives sourcesJar
+    archives javadocJar
 }
