--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.2.60'
+    ext.kotlin_version = "1.2.60"
 
     repositories {
         mavenCentral()
@@ -9,25 +9,25 @@ buildscript {
     }
 }
 
-group 'com.helpchoice.kotlin'
-version '1.0.2-SNAPSHOT'
+group = "com.helpchoice.kotlin"
+version = "1.1.0"
 
-apply plugin: 'java'
-apply plugin: 'kotlin'
-apply plugin: 'maven'
+apply plugin: "java"
+apply plugin: "kotlin"
+apply plugin: "maven"
 
-        sourceCompatibility = 1.8
+sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version")
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile("junit:junit:4.12")
 
-    testCompile "io.kotlintest:kotlintest:2.0.0"
+    testCompile("io.kotlintest:kotlintest:2.0.0")
 
 }
 
@@ -39,17 +39,17 @@ compileTestKotlin {
 }
 
 task writeNewPom {
-    group 'build'
+    group "build"
 
     doLast {
         pom {
             project {
-                inceptionYear '2008'
+                inceptionYear "2008"
                 licenses {
                     license {
-                        name 'The Apache Software License, Version 2.0'
-                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-                        distribution 'repo'
+                        name "The Apache Software License, Version 2.0"
+                        url "http://www.apache.org/licenses/LICENSE-2.0.txt"
+                        distribution "repo"
                     }
                 }
             }
@@ -58,16 +58,16 @@ task writeNewPom {
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
-    group 'build'
+    group "build"
 
-    classifier = 'sources'
+    classifier = "sources"
     from sourceSets.main.allSource
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
-    group 'build'
+    group "build"
 
-    classifier = 'javadoc'
+    classifier = "javadoc"
     from javadoc.destinationDir
 }
 
