--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
 }
 
 group = "com.helpchoice.kotlin"
-version = "1.1.1-SNAPSHOT"
+version = "1.1.0"
 
 apply plugin: "java"
 apply plugin: "kotlin"
