--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,11 @@ buildscript {
     ext.kotlin_version = "1.2.60"
 
     repositories {
-        mavenCentral()
+        jcenter()
     }
     dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version")
+        classpath("org.jetbrains.dokka:dokka-gradle-plugin:${dokka_version}")
     }
 }
 
@@ -15,11 +16,12 @@ version = "1.1.5"
 apply plugin: "java"
 apply plugin: "kotlin"
 apply plugin: "maven"
+apply plugin: 'org.jetbrains.dokka'
 
 sourceCompatibility = 1.8
 
 repositories {
-    mavenCentral()
+    jcenter()
 }
 
 dependencies {
@@ -64,14 +66,19 @@ task sourcesJar(type: Jar, dependsOn: classes) {
     from sourceSets.main.allSource
 }
 
-task javadocJar(type: Jar, dependsOn: javadoc) {
+dokka {
+    outputFormat = 'html'
+    outputDirectory = "$buildDir/dokka"
+}
+
+task dokkadocJar(type: Jar, dependsOn: dokka) {
     group "build"
 
     classifier = "javadoc"
-    from javadoc.destinationDir
+    from dokka.outputDirectory
 }
 
 artifacts {
     archives sourcesJar
-    archives javadocJar
+    archives dokkadocJar
 }
