--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
-kotlinVersion=1.3.40
+kotlinVersion=1.3.72
 flue_version=2.1.0
+micronautVersion=2.0.0
 spekVersion=1.1.5
 junitVersion=5.1.0
 dokka_version=0.10.0
